--- a/web/s0-股指期权保证金.html
+++ b/web/s0-股指期权保证金.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>股票期权保证金</title>
+    <title>股指期权保证金</title>
     <style>
         .h {
             color: blue;
